@@ -33,6 +33,11 @@
 
 #include <skstream/sksocket.h>
 
+// To not include full <cstdio>, we define only EOF
+#ifndef EOF
+#define EOF (-1)
+#endif
+
 /////////////////////////////////////////////////////////////////////////////
 // class socketbuf
 /////////////////////////////////////////////////////////////////////////////
